[tool.poetry]
name = "9c-signer"
version = "0.1.0"
description = ""
authors = ["Yang Chun Ung <qooraven@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
ethereum-kms-signer = "^0.1.6"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
mypy = "^1.5.1"
httpx = "^0.24.1"
types-pyasn1 = "^0.4.0.6"
crypto = "^1.4.1"
bencodex = "^1.0.1"
gql = {version = "^3.5.0b5", allow-prereleases = true}
sqlalchemy = {extras = ["mypy"], version = "^2.0.20"}
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
alembic = "^1.11.3"
celery-types = "^0.19.0"
types-python-dateutil = "^2.8.19.14"
redis = "^5.0.0"
types-redis = "^4.6.0.5"
celery = "^5.3.4"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
autoflake = "^2.2.0"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
pytest-postgresql = "^5.0.0"
pytest-celery = "^0.0.0"
pytest-redis = "^3.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "migrations"
plugins = "pydantic.mypy"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
env_files = [".test.env", ".local.env"]
addopts = "--basetemp=/tmp/pytest --redis-exec=/opt/homebrew/bin/redis-server"
filterwarnings = [
    "ignore::DeprecationWarning",
]
